# graphical-ipython

./: .gitignore  LICENSE.md  README.md  pyproject.toml
icat/: __init__.py
